Removed unneeded ProgressBehavior and StatusBarBehavior. Moved LicenseValidator to the Misc folder. Replaced every binding expression with x:Bind. Removed mvvm messages.

--- a/DjvuApp.Universal/Dialogs/Internal/BusyIndicatorInternal.xaml
+++ b/DjvuApp.Universal/Dialogs/Internal/BusyIndicatorInternal.xaml
@@ -31,7 +31,7 @@
             RelativePanel.Below="progressRing"
             RelativePanel.AlignHorizontalCenterWithPanel="True"
             Margin="12"
-            Text="{x:Bind TaskDescription}"
+            Text="{x:Bind TaskDescription, Mode=OneWay}"
             Style="{ThemeResource SubtitleTextBlockStyle}"/>
     </RelativePanel>
 </UserControl>
