--- a/DjvuApp.Universal/Dialogs/Internal/SelectBookmarkDialogInternal.xaml
+++ b/DjvuApp.Universal/Dialogs/Internal/SelectBookmarkDialogInternal.xaml
@@ -4,11 +4,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:books="using:DjvuApp.Model.Books"
     mc:Ignorable="d"
     Title="BOOKMARKS"
     FullSizeDesired="True"
     Style="{StaticResource FullScreenContentDialogStyle}"
-    DataContext="{Binding RelativeSource={RelativeSource Self}}"
     x:Uid="SelectBookmarkDialog" 
 	d:DataContext="{d:DesignData /SampleData/SelectBookmarkDialogSampleDataSource/SelectBookmarkDialogSampleDataSource.xaml}">
 
@@ -16,9 +16,10 @@
         <TextBlock 
             x:Uid="SelectBookmarkDialog_NoBookmarksHint"
             Text="No saved bookmarks"
-            Visibility="{Binding Items, Converter={StaticResource IsNullOrEmptyToVisibilityConverter}, ConverterParameter=negate}"/>
+            Visibility="{x:Bind Items, Converter={StaticResource IsNullOrEmptyToVisibilityConverter}, ConverterParameter=negate}"/>
         <ListView
-            ItemsSource="{Binding Items}"
+            Margin="-10,0"
+            ItemsSource="{x:Bind Items}"
             ItemClick="ItemClickHandler"
             IsItemClickEnabled="True">
             <ItemsControl.ItemContainerStyle>
@@ -27,13 +28,12 @@
                 </Style>
             </ItemsControl.ItemContainerStyle>
             <ItemsControl.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate x:DataType="books:IBookmark">
                     <StackPanel Margin="0,12">
-                        <TextBlock
-                            Text="{Binding Title}"/>
+                        <TextBlock Text="{x:Bind Title}" Style="{StaticResource SubtitleTextBlockStyle}"/>
                         <TextBlock>
-                            <Run x:Uid="SelectBookmarkDialog_BookmarkSubheader" Text="Page "/>
-                            <Run Text="{Binding PageNumber}"/>
+                            <Run x:Uid="SelectBookmarkDialog_BookmarkSubheader" Text="Page"/>
+                            <Run Text="{x:Bind PageNumber}"/>
                         </TextBlock>
                     </StackPanel>
                 </DataTemplate>
