--- a/DjvuApp.Universal/Dialogs/Internal/OutlineDialogInternal.xaml
+++ b/DjvuApp.Universal/Dialogs/Internal/OutlineDialogInternal.xaml
@@ -26,7 +26,7 @@
     </ContentDialog.TitleTemplate>
 
     <ListView
-        Margin="-20,0"
+        Margin="-20,12,-20,0"
         ItemsSource="{Binding Items}"
         ItemClick="ItemClickHandler"
         IsItemClickEnabled="True">
