--- a/DjvuApp.Universal/App.xaml
+++ b/DjvuApp.Universal/App.xaml
@@ -18,6 +18,31 @@
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
 
+            <Color x:Key="SystemAltHighColor">#FFFFFFFF</Color>
+            <Color x:Key="SystemAltLowColor">#33FFFFFF</Color>
+            <Color x:Key="SystemAltMediumColor">#99FFFFFF</Color>
+            <Color x:Key="SystemAltMediumHighColor">#CCFFFFFF</Color>
+            <Color x:Key="SystemAltMediumLowColor">#66FFFFFF</Color>
+            <Color x:Key="SystemBaseHighColor">#FF000000</Color>
+            <Color x:Key="SystemBaseLowColor">#33000000</Color>
+            <Color x:Key="SystemBaseMediumColor">#99000000</Color>
+            <Color x:Key="SystemBaseMediumHighColor">#CC000000</Color>
+            <Color x:Key="SystemBaseMediumLowColor">#66000000</Color>
+            <Color x:Key="SystemChromeAltLowColor">#FF171717</Color>
+            <Color x:Key="SystemChromeBlackHighColor">#FF000000</Color>
+            <Color x:Key="SystemChromeBlackLowColor">#33000000</Color>
+            <Color x:Key="SystemChromeBlackMediumLowColor">#66000000</Color>
+            <Color x:Key="SystemChromeBlackMediumColor">#CC000000</Color>
+            <Color x:Key="SystemChromeDisabledHighColor">#FFCCCCCC</Color>
+            <Color x:Key="SystemChromeDisabledLowColor">#FF7A7A7A</Color>
+            <Color x:Key="SystemChromeHighColor">#FFCCCCCC</Color>
+            <Color x:Key="SystemChromeLowColor">#FFF2F2F2</Color>
+            <Color x:Key="SystemChromeMediumColor">#FFE6E6E6</Color>
+            <Color x:Key="SystemChromeMediumLowColor">#FFF2F2F2</Color>
+            <Color x:Key="SystemChromeWhiteColor">#FFFFFFFF</Color>
+            <Color x:Key="SystemListLowColor">#19000000</Color>
+            <Color x:Key="SystemListMediumColor">#33000000</Color>
+
             <common:StringFormatConverter x:Key="StringFormatConverter"/>
             <common:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
             <common:IsNullOrEmptyToVisibilityConverter x:Key="IsNullOrEmptyToVisibilityConverter"/>
